Thu Dec  5 16:11:04 2013  Aman Gupta <ruby@tmm1.net>

	* include/ruby/intern.h: add rb_gc_stat() for access to GC.stat
	  variables from c-api
	* gc.c (rb_gc_stat): new c-api method. accepts either VALUE hash like
	  GC.stat, or VALUE symbol key and returns size_t directly. the second
	  form is useful to avoid allocations, i.e. for usage inside
	  INTERNAL_EVENT_GC tracepoints.
	* gc.c (gc_stat): add GC.stat(:key) to return single value instead of hash
	* gc.c (gc_stat_internal): helper method to retrieve single or all stat values
	* test/ruby/test_gc.rb (class TestGc): test for new behavior
	* NEWS: note about this new api

Thu Dec  5 14:40:41 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash): revert r43981 and bail out to the outermost frame
	  when recursion is detected.

Thu Dec  5 13:47:15 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (vm_malloc_size): added.
	  return malloc_usable_size() if possible.

	* gc.c (MALLOC_ALLOCATED_SIZE): add new setting macro to enable
	  GC.allocated_size.
	  If platform supports `malloc_usable_size()' (or similar one),
	  GC.allocated_size can be implemented with this function.
	  Default is 0.

	* gc.c (vm_xmalloc, vm_xrealloc, vm_xfree): use vm_malloc_size()
	  to detect collect allocated size.

	* gc.c (vm_malloc_increase): refactoring.

Thu Dec  5 13:19:03 2013  Aman Gupta <ruby@tmm1.net>

	* include/ruby/ruby.h: remove INTERNAL_EVENT_GC_END and replace with
	  two new events: GC_END_MARK and GC_END_SWEEP
	* gc.c (gc_after_sweep): emit GC_END_SWEEP after lazy sweep is done
	* gc.c (gc_marks_body): emit GC_END_MARK at end of minor/major mark
	* ext/-test-/tracepoint/tracepoint.c (struct tracepoint_track): tests
	  for new events.
	* test/-ext-/tracepoint/test_tracepoint.rb (class TestTracepointObj):
	  ditto.
	* NEWS: remove ObjectSpace.after_gc_*_hook. These are only a sample,
	  and will be removed before ruby 2.1.
	* ext/objspace/gc_hook.c: remove ObjectSpace.after_gc_end_hook=
